<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dummy_bms</name>
  <version>0.0.0</version>
  <description>Dummy module to test eHMI</description>
  <maintainer email="pankaj.tanwar@futu-re.co.jp">Pankaj Tanwar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <!-- <depend>geometry_msgs</depend>
  <depend>tier4_planning_msgs</depend>
  <depend>autoware_adapi_v1_msgs</depend>
  <depend>autoware_auto_vehicle_msgs</depend>
  <depend>tier4_external_api_msgs</depend>
  <depend>tier4_control_msgs</depend>
  <depend>tier4_system_msgs</depend>
  <depend>autoware_auto_perception_msgs</depend>
  <depend>tier4_autoware_utils</depend> -->

  
  <exec_depend>ros2launch</exec_depend>

</package>
